# data-guard

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
case_studies/churn_dataset/: README.md  leakage_found.md  metrics_after.md  metrics_before.md  run_case_study.py
config/: settings.yaml
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx
dashboard/src/pages/: AlertsPage.tsx  DashboardPage.tsx  DriftPage.tsx  EDAPage.tsx  ExperimentPage.tsx  HistoryPage.tsx  LeakagePage.tsx  QualityPage.tsx  RiskScoringPage.tsx  RulesPage.tsx
dashboard/src/store/: validationHistory.ts
examples/: basic_usage.py
ml/: DEEP_DIVE_UNDERSTANDING.md  DataGuard_AI_FineTuning_Report.md
ml/Model/: Modelfile
ml/insight_model/: generate_training_data.py  train.py  train_data.jsonl
src/: __init__.py
src/ai_insights/: insight_engine.py  prompt_builder.py
src/alembic/: env.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  dashboard_routes.py  drift_routes.py  eda_routes.py  leakage_routes.py  quality_routes.py  task_routes.py
src/api/schemas/: __init__.py  requests.py  responses.py  tasks.py
src/core/: __init__.py  alert_system.py  celery_app.py  config.py  data_versioning.py  database.py  exceptions.py  logging_config.py  models.py
src/data_quality/: __init__.py  quality_engine.py  quality_report.py
src/data_quality/validators/: __init__.py  accuracy_validator.py  base.py  completeness_checker.py  consistency_analyzer.py  custom_rules.py  schema_validator.py  timeliness_monitor.py
src/drift/: drift_detector.py
src/eda/: profiler.py  schemas.py
src/eda/analyzers/: categorical.py  correlation.py  missing.py  numeric.py
src/leakage_detection/: __init__.py  impact_experiment.py  leakage_engine.py  leakage_report.py  network_analysis.py  risk_scoring_model.py
src/leakage_detection/detectors/: __init__.py  base.py  data_drift_detector.py  feature_leakage_detector.py  target_leakage_detector.py  temporal_leakage_detector.py  train_test_detector.py
src/scripts/: init_db.py
src/tasks/: eda_tasks.py
src/utils/: __init__.py  data_loader.py  statistics.py
tests/: conftest.py
tests/integration/: test_engines.py
tests/unit/: test_alert_system.py  test_data_versioning.py  test_detectors.py  test_impact_experiment.py  test_risk_scoring.py  test_validators.py
